minor ui changes

--- a/src/content/howto/eduroam.mdx
+++ b/src/content/howto/eduroam.mdx
@@ -1,6 +1,5 @@
 export const frontmatter = { title: "Eduroam" }
 
-
 # Guide to connecting to eduroam WiFi at NITK, setting up your account, and best practices for secure use.
 ---
 
@@ -22,8 +21,7 @@ To use eduroam, you must **create an account** using your **@nitk.edu.in** email
 🔗 [Create Eduroam Account](https://iris.nitk.ac.in/hrms/wifi/users/create_account)
 
 ### 🔑 Steps:
-![Eduroam Account Setup](/eduroam-setup.png)
-
+<img src="/eduroam_steps.png" width="600" height="400" />
 
 1. Visit the **Eduroam Account Creation Page**.
 2. Register with your **@nitk.edu.in** email.
