Added images to "How to"

--- a/src/content/howto/before_reporting.mdx
+++ b/src/content/howto/before_reporting.mdx
@@ -15,6 +15,13 @@ Before registering a network issue, please follow these steps to diagnose the pr
   - Remove and replug the cable.
   - If the issue persists, contact a **vendor** to check and replace the cable.
 
+<img
+  src="/images_mdx/light_Indicator.png"
+  alt="Network Diagram"
+  style={{ borderRadius: '10px' }}
+/>
+
+
 If the **LEDs are glowing**, proceed to Step 2.
 
 ---
@@ -76,21 +83,19 @@ If all the above steps fail, submit a complaint with the test results:
 - Mention whether you **checked the cable, verified IP settings, ran ping tests, and attempted telnet**.
 - This helps in resolving your issue faster.
 
-Register your complaint at: **[NITK Network Complaints Page](http://network.nitk.ac.in/complaints)** *(Update the actual URL when available)*.
+Register your complaint at: <a href="https://iris.nitk.ac.in/hrms/hostels/hostel_complaints" target="_blank" rel="noopener noreferrer"><strong>NITK Network Complaints Page</strong></a>
+ .
 
 ---
 
 ## **Important Notices**
 
-1. **Check if your IP is blocked**
-   - Regularly verify if your machine is generating **suspicious traffic** at:
-     [http://network.nitk.ac.in/blockip](http://network.nitk.ac.in/blockip) *(Update the actual URL when available)*.
-   - If your IP is blocked, scan your device for malware and apply the latest security patches.
 
-2. **CCC’s Responsibility**
+
+1. **CCC’s Responsibility**
    - CCC is responsible for network issues **up to the building switch**.
    - Issues beyond the switch (e.g., within your computer or room cabling) are **your responsibility**.
-   - Contact external vendors for assistance if needed.
+   
 
 3. **New Network Cabling**
    - Any modifications or new cabling setups **must be approved** by CCC before implementation.
