--- a/src/content/howto/captive_portal.mdx
+++ b/src/content/howto/captive_portal.mdx
@@ -8,10 +8,17 @@ Follow the steps below to connect to NITK Wi-Fi and LAN:
 ## **Wi-Fi Setup**  
 1. Connect to **NITK-NET** WiFi.  
 2. Use passkey: `2K16NITK`.  
-3. Open [NITK Captive Portal](https://nac.nitk.ac.in:8090/) and log in.  
+3. Open <a href="https://nac.nitk.ac.in:8090/" target="_blank" rel="noopener noreferrer"><strong>NITK Captive Portal</strong></a> and log in.
+
 
 ## **LAN Setup**  
 1. Connect LAN cable.  
 2. Follow the same login process as Wi-Fi.  
 
-> **Note:** Change your captive portal password through IRIS by navigating to your profile and selecting the **"Change Password"** option. Ensure you update it only via the official IRIS website for a successful password change.  
+> **Note:** Change your captive portal password through IRIS by clicking on your display picture and selecting the **"Change Password"** option. Ensure you update it only via the official IRIS website for a successful password change.  
+
+<img
+  src="/images_mdx/ChangePassword.png"
+  alt="Change Password"
+  style={{ borderRadius: '10px' }}
+/>
