Added about-us page

--- a/src/content/facilities/data_centre_server_infrastructure.mdx
+++ b/src/content/facilities/data_centre_server_infrastructure.mdx
@@ -4,6 +4,12 @@ export const frontmatter = { title: "Data Centre & Server Infrastructure" }
 
 The **NITK Data Centre**, housed in the **CCC Ground Floor**, is a state-of-the-art facility that serves as the backbone of the institute’s digital infrastructure.
 
+<img
+  src="/images_mdx/Server.png"
+  alt="Server"
+  style={{ borderRadius: '1px' }}
+/>
+
 ## **Core Features**
 - **Integration hub for OFC backbone**, ensuring high-speed data transfer and seamless connectivity.
 - **Houses Internet connections to BSNL & NKN** along with associated networking equipment.
