--- a/src/content/facilities/general_computing.mdx
+++ b/src/content/facilities/general_computing.mdx
@@ -2,6 +2,12 @@ export const frontmatter = { title: "General Purpose Computing & Labs" }
 
 # General Purpose Computing & Labs
 
+<img
+  src="/images_mdx/Lab.png"
+  alt="Lab"
+  style={{ borderRadius: '1px' }}
+/>
+
 ## **Overview**
 The **first-floor hall of the Central Computer Centre (CCC)** at **NITK Surathkal** is dedicated to **general-purpose computing and lab facilities**. This space is equipped with a **large number of desktop computers**, providing students and faculty with seamless access to the internet, academic tools, and essential software resources.
 
