Added ModalImage for one need to add for all

--- a/src/content/network_guides/eduroam.mdx
+++ b/src/content/network_guides/eduroam.mdx
@@ -1,5 +1,7 @@
 export const frontmatter = { title: "Eduroam" }
 
+import ModalImage from "../../components/ui/ModalImage"
+
 # Guide to connecting to eduroam WiFi at NITK, setting up your account, and best practices for secure use.
 ---
 
@@ -23,7 +25,12 @@ To use eduroam, you must **create an account** using your **@nitk.edu.in** email
 [Create Eduroam Account](https://iris.nitk.ac.in/hrms/wifi/users/create_account)
 
 ### Steps:
-<img src="/images_mdx/eduroam_steps.png" width="600" height="400" />
+<ModalImage
+  src="/images_mdx/eduroam_steps.png"
+  alt="Eduroam Setup Steps"
+  width="600px"
+  height="400px"
+/>
 
 1. Visit the **Eduroam Account Creation Page**.
 2. Save your credentials securely!
