--- a/src/content/network_guides/guide_for_troubleshooting.mdx
+++ b/src/content/network_guides/guide_for_troubleshooting.mdx
@@ -1,6 +1,6 @@
 export const frontmatter = { title: "Guide for troubleshooting" }
 
-import CodeBlock from "../../components/CodeBlock"
+import CodeBlock from "../../components/ui/CodeBlock"
 
 # Step-by-step guide for troubleshooting network issues before registering a complaint at NITK.
 
