Image Zoom added

--- a/src/content/network_guides/captive_portal.mdx
+++ b/src/content/network_guides/captive_portal.mdx
@@ -1,4 +1,6 @@
 export const frontmatter = { title: "NITK Net Captive Portal" }
+import ModalImage from "../../components/ui/ModalImage"
+import ZoomableImage from "../../components/ui/ZoomableImage"
 
 
 # NITK Net Captive Portal Configuration  
@@ -17,8 +19,9 @@ Follow the steps below to connect to NITK Wi-Fi and LAN:
 
 > **Note:** Change your captive portal password through IRIS by clicking on your display picture and selecting the **"Change Password"** option. Ensure you update it only via the official IRIS website for a successful password change.  
 
-<img
+<ZoomableImage
   src="/images_mdx/ChangePassword.png"
   alt="Change Password"
-  style={{ borderRadius: '10px' }}
+  width="2000px"
+  height="400px"
 />
