--- a/src/content/network_guides/guide_for_troubleshooting.mdx
+++ b/src/content/network_guides/guide_for_troubleshooting.mdx
@@ -1,6 +1,7 @@
 export const frontmatter = { title: "Guide for troubleshooting" }
 
 import CodeBlock from "../../components/ui/CodeBlock"
+import ZoomableImage from "../../components/ui/ZoomableImage"
 
 # Step-by-step guide for troubleshooting network issues before registering a complaint at NITK.
 
@@ -15,11 +16,13 @@ Before registering a network issue, please follow these steps to diagnose the pr
   - Remove and replug the cable.
   - If the issue persists, contact a **vendor** to check and replace the cable.
 
-<img
-  src="/images_mdx/light_Indicator.png"
-  alt="Network Diagram"
-  style={{ borderRadius: '10px' }}
+<ZoomableImage 
+src="/images_mdx/light_Indicator.png" 
+alt="Network Diagram"
+width="600px"
+height="400px"
 />
+  
 
 
 If the **LEDs are glowing**, proceed to Step 2.
