--- a/src/content/network_guides/eduroam.mdx
+++ b/src/content/network_guides/eduroam.mdx
@@ -1,6 +1,7 @@
 export const frontmatter = { title: "Eduroam" }
 
 import ModalImage from "../../components/ui/ModalImage"
+import ZoomableImage from "../../components/ui/ZoomableImage"
 
 # Guide to connecting to eduroam WiFi at NITK, setting up your account, and best practices for secure use.
 ---
@@ -25,7 +26,7 @@ To use eduroam, you must **create an account** using your **@nitk.edu.in** email
 [Create Eduroam Account](https://iris.nitk.ac.in/hrms/wifi/users/create_account)
 
 ### Steps:
-<ModalImage
+<ZoomableImage
   src="/images_mdx/eduroam_steps.png"
   alt="Eduroam Setup Steps"
   width="600px"
