Final web changes

--- a/src/content/guides/request-captive-id.mdx
+++ b/src/content/guides/request-captive-id.mdx
@@ -50,7 +50,7 @@ Faculty → HoD → CCC Chairman
 </Table>
 
 <div className="mt-8 mb-10 flex justify-center">
-  <Button href="https://iris.nitk.ac.in/request/" size="md" variant="auto">
-    Apply Now
+  <Button href="https://iris.nitk.ac.in/requests">
+    Request Now
   </Button>
 </div>
