--- a/src/content/guides/request-vpn-access.mdx
+++ b/src/content/guides/request-vpn-access.mdx
@@ -1,8 +1,8 @@
-export const frontmatter = { title: "Request for VPN Access" }
+export const frontmatter = { title: "Request for NITK VPN Access" }
 import { Table, Thead, Tbody, Tr, Th, Td } from '../../components/ui/tables'
 import Button from '../../components/ui/button'
 
-# Request for VPN Access
+# Request for NITK VPN Access
 
 ## How to Apply
 
@@ -65,8 +65,8 @@ Faculty → HoD → CCC Chairman
 
 Enter your IRIS username in **BLOCK letters**, including salutation if applicable, exactly as shown in your profile.
 
-<div className="mt-8 flex justify-center">
-  <Button href="https://iris.nitk.ac.in/request/" size="lg" variant="auto">
+<div className="mt-8 mb-10 flex justify-center">
+  <Button href="https://iris.nitk.ac.in/requests/" size="lg" variant="auto">
     Apply Now
   </Button>
 </div>
