--- a/src/content/guides/request-container.mdx
+++ b/src/content/guides/request-container.mdx
@@ -65,8 +65,8 @@ Faculty → HoD → CCC Chairman
 
 Enter your IRIS username in **BLOCK letters**, including salutation if applicable, exactly as shown in your profile.
 
-<div className="mt-8 flex justify-center">
-  <Button href="https://iris.nitk.ac.in/request/" size="lg" variant="auto">
+<div className="mt-8 mb-10 flex justify-center">
+  <Button href="https://iris.nitk.ac.in/requests/" size="lg" variant="auto">
     Apply Now
   </Button>
 </div>
