--- a/src/content/guides/request-container.mdx
+++ b/src/content/guides/request-container.mdx
@@ -1,8 +1,8 @@
-export const frontmatter = { title: "Request for Container" }
+export const frontmatter = { title: "Request for Container/ VM" }
 import { Table, Thead, Tbody, Tr, Th, Td } from '../../components/ui/tables'
 import Button from '../../components/ui/button'
 
-# Request for Container
+# Request for Container/ Virtual Machine
 
 ## How to Apply
 
