--- a/src/content/guides/request-institute-url.mdx
+++ b/src/content/guides/request-institute-url.mdx
@@ -1,8 +1,8 @@
-export const frontmatter = { title: "Request for Institute URL" }
+export const frontmatter = { title: "Request for Institute Subdomain" }
 import { Table, Thead, Tbody, Tr, Th, Td } from '../../components/ui/tables'
 import Button from '../../components/ui/button'
 
-# Request for Institute URL
+# Request for Institute Subdomain (.nitk.ac.in)
 
 ## How to Apply
 
