content update ethernet

--- a/src/content/facilities/ethernet.mdx
+++ b/src/content/facilities/ethernet.mdx
@@ -3,11 +3,11 @@ export const frontmatter = { title: "Ethernet" }
 
 # Ethernet Facility
 
-The wired Ethernet network at NITK provides a high-speed, stable, and secure connection for academic and administrative needs.
+The wired Ethernet network at NITK provides a high-speed, stable, and secure connection for hostels, academic and administrative needs.
 
 ## **Core Features**
-- **20 km of 12-core Optical Fiber Cable (OFC)** connecting campus buildings.
-- **1 Gbps & 10 Gbps backbone** ensuring high-speed data transfer.
+- **12-core Optical Fiber Cable (OFC)** connecting campus buildings.
+- **10 Gbps backbone** ensuring high-speed data transfer.
 - **Dedicated broadband for residences** with seamless integration into the academic network.
 - **Departments, hostels, and administrative offices** are connected via the core switch.
 
@@ -22,6 +22,5 @@ The wired Ethernet network at NITK provides a high-speed, stable, and secure con
 - **Access control policies** to ensure authorized usage.
 
 ## **Future Upgrades**
-- Expansion of **10 Gbps backbone** to additional academic blocks.
 - Implementation of **AI-driven network optimization** for enhanced performance.
 - Strengthening security with **next-gen firewall and intrusion detection systems**.
