updated all the required changes in mdx files

--- a/src/content/guides/guide_for_troubleshooting.mdx
+++ b/src/content/guides/guide_for_troubleshooting.mdx
@@ -5,6 +5,12 @@ import ZoomableImage from "../../components/ui/ZoomableImage"
 
 # Step-by-step guide for troubleshooting network issues before registering a complaint at NITK.
 
+⚠ **Note:** This guide is meant **only for students**.  
+**Faculty members** should directly email their issue to:  
+**notifyccc@nitk.edu.in**
+
+
+
 Before registering a network issue, please follow these steps to diagnose the problem. This will help in faster resolution and minimize downtime.
 
 ---
@@ -22,8 +28,6 @@ alt="Network Diagram"
 width="600px"
 height="400px"
 />
-  
-
 
 If the **LEDs are glowing**, proceed to Step 2.
 
@@ -86,24 +90,20 @@ If all the above steps fail, submit a complaint with the test results:
 - Mention whether you **checked the cable, verified IP settings, ran ping tests, and attempted telnet**.
 - This helps in resolving your issue faster.
 
-Register your complaint at: <a href="https://iris.nitk.ac.in/hrms/hostels/hostel_complaints" target="_blank" rel="noopener noreferrer"><strong>NITK Network Complaints Page</strong></a>
- .
+Register your complaint at: <a href="https://iris.nitk.ac.in/hrms/hostels/hostel_complaints" target="_blank" rel="noopener noreferrer"><strong>NITK Network Complaints Page</strong></a>.
 
 ---
 
 ## **Important Notices**
 
-
-
 1. **CCC’s Responsibility**
    - CCC is responsible for network issues **up to the building switch**.
    - Issues beyond the switch (e.g., within your computer or room cabling) are **your responsibility**.
-   
 
-3. **New Network Cabling**
+2. **New Network Cabling**
    - Any modifications or new cabling setups **must be approved** by CCC before implementation.
 
-4. **Security Recommendations**
+3. **Security Recommendations**
    - Keep your system updated with the **latest patches** and **antivirus software**.
    - Avoid using unauthorized software that may cause network disruptions.
 
