--- a/src/content/guides/request-container.mdx
+++ b/src/content/guides/request-container.mdx
@@ -7,7 +7,7 @@ import Button from '../../components/ui/button'
 ## How to Apply
 
 1. Go to [IRIS](https://iris.nitk.ac.in/)
-2. Navigate to **Service Requests**
+2. Navigate to **Institute → Service Requests**
 3. Select **Request for Container**
 
 ## Request Flow
