VPN guides added and updated

--- a/src/content/guides/request-vpn-access.mdx
+++ b/src/content/guides/request-vpn-access.mdx
@@ -70,3 +70,8 @@ Enter your IRIS username in **BLOCK letters**, including salutation if applicabl
     Apply Now
   </Button>
 </div>
+
+## After Approval
+
+Once your VPN access is approved and activated, follow the  
+[NITK VPN Services Guide](/vpn-services) to configure the VPN on your device.
