--- a/src/content/guides/guide_for_troubleshooting.mdx
+++ b/src/content/guides/guide_for_troubleshooting.mdx
@@ -2,14 +2,15 @@ export const frontmatter = { title: "Guide for troubleshooting" }
 
 import CodeBlock from "../../components/ui/CodeBlock"
 import ZoomableImage from "../../components/ui/ZoomableImage"
+import NoteBox from "../../components/ui/NoteBox"
 
 # Step-by-step guide for troubleshooting network issues before registering a complaint at NITK.
 
+<NoteBox>
 ⚠ **Note:** This guide is meant **only for students**.  
 **Faculty members** should directly email their issue to:  
 **notifyccc@nitk.edu.in**
-
-
+</NoteBox>
 
 Before registering a network issue, please follow these steps to diagnose the problem. This will help in faster resolution and minimize downtime.
 
@@ -96,6 +97,7 @@ Register your complaint at: <a href="https://iris.nitk.ac.in/hrms/hostels/hostel
 
 ## **Important Notices**
 
+
 1. **CCC’s Responsibility**
    - CCC is responsible for network issues **up to the building switch**.
    - Issues beyond the switch (e.g., within your computer or room cabling) are **your responsibility**.
@@ -106,5 +108,6 @@ Register your complaint at: <a href="https://iris.nitk.ac.in/hrms/hostels/hostel
 3. **Security Recommendations**
    - Keep your system updated with the **latest patches** and **antivirus software**.
    - Avoid using unauthorized software that may cause network disruptions.
+
 
 For further assistance, contact the **NITK Network Helpdesk** at **+91-824-2473085**.
