--- a/src/content/guides/request-container.mdx
+++ b/src/content/guides/request-container.mdx
@@ -1,8 +1,13 @@
-export const frontmatter = { title: "Request for Container/ VM" }
+export const frontmatter = { title: "Request for Container/ Virtual Machine" }
 import { Table, Thead, Tbody, Tr, Th, Td } from '../../components/ui/tables'
 import Button from '../../components/ui/button'
+import NoteBox from "../../components/ui/NoteBox"
 
 # Request for Container/ Virtual Machine
+
+<NoteBox type="warning">
+> *Note: Only Faculty can request this (can request on behalf of students).*
+</NoteBox>
 
 ## How to Apply
 
@@ -13,8 +18,6 @@ import Button from '../../components/ui/button'
 ## Request Flow
 
 Faculty → HoD → CCC Chairman
-
-> *Note: Only Faculty can request this (can request on behalf of students).*
 
 ## Fields
 
