--- a/src/content/guides/request-vpn-access.mdx
+++ b/src/content/guides/request-vpn-access.mdx
@@ -1,8 +1,13 @@
 export const frontmatter = { title: "Request for NITK VPN Access" }
 import { Table, Thead, Tbody, Tr, Th, Td } from '../../components/ui/tables'
 import Button from '../../components/ui/button'
+import NoteBox from "../../components/ui/NoteBox"
 
 # Request for NITK VPN Access
+
+<NoteBox type="warning">
+> *Note: Only Faculty can make this request.*
+</NoteBox>
 
 ## How to Apply
 
@@ -13,8 +18,6 @@ import Button from '../../components/ui/button'
 ## Request Flow
 
 Faculty → HoD → CCC Chairman
-
-> *Note: Only Faculty can make this request.*
 
 ## Fields
 
@@ -74,4 +77,4 @@ Enter your IRIS username in **BLOCK letters**, including salutation if applicabl
 ## After Approval
 
 Once your VPN access is approved and activated, follow the  
-[NITK VPN Services Guide](/vpn-services) to configure the VPN on your device.
+[NITK VPN Services Guide](NITK_VPN_Services) to configure the VPN on your device.
