--- a/src/content/guides/captive_portal.mdx
+++ b/src/content/guides/captive_portal.mdx
@@ -1,7 +1,7 @@
 export const frontmatter = { title: "NITK Net Captive Portal" }
 import ModalImage from "../../components/ui/ModalImage"
 import ZoomableImage from "../../components/ui/ZoomableImage"
-
+import NoteBox from "../../components/ui/NoteBox"
 
 # NITK Net Captive Portal Configuration  
 
@@ -12,12 +12,13 @@ Follow the steps below to connect to NITK Wi-Fi and LAN:
 2. Use passkey: `2K16NITK`.  
 3. Open <a href="https://nac.nitk.ac.in:8090/" target="_blank" rel="noopener noreferrer"><strong>NITK Captive Portal</strong></a> and log in.
 
-
 ## **LAN Setup**  
 1. Connect LAN cable.  
 2. Follow the same login process as Wi-Fi.  
 
-> **Note:** Change your captive portal password through IRIS by clicking on your display picture and selecting the **"Change Password"** option. Ensure you update it only via the official IRIS website for a successful password change.  
+<NoteBox>
+**Note:** Change your captive portal password through IRIS by clicking on your display picture and selecting the **"Change Password"** option. Ensure you update it only via the official IRIS website for a successful password change.
+</NoteBox>
 
 <ZoomableImage
   src="/images_mdx/ChangePassword.png"
