--- a/src/content/guides/request-captive-id.mdx
+++ b/src/content/guides/request-captive-id.mdx
@@ -1,8 +1,13 @@
 export const frontmatter = { title: "Request for Captive Portal ID" }
 import { Table, Thead, Tbody, Tr, Th, Td } from '../../components/ui/tables'
 import Button from '../../components/ui/button'
+import NoteBox from "../../components/ui/NoteBox"
 
 # Request for Captive Portal ID
+
+<NoteBox type="warning">
+> *Note: Only Faculty can make this request.*
+</NoteBox>
 
 ## How to Apply
 
@@ -13,8 +18,6 @@ import Button from '../../components/ui/button'
 ## Request Flow
 
 Faculty → HoD → CCC Chairman
-
-> *Note: Only Faculty can make this request.*
 
 ## Fields
 
