Notes ui changed

--- a/src/content/guides/captive_portal.mdx
+++ b/src/content/guides/captive_portal.mdx
@@ -16,9 +16,9 @@ Follow the steps below to connect to NITK Wi-Fi and LAN:
 1. Connect LAN cable.  
 2. Follow the same login process as Wi-Fi.  
 
-<NoteBox>
-**Note:** Change your captive portal password through IRIS by clicking on your display picture and selecting the **"Change Password"** option. Ensure you update it only via the official IRIS website for a successful password change.
-</NoteBox>
+
+> **Note:** Change your captive portal password through IRIS by clicking on your display picture and selecting the **"Change Password"** option. Ensure you update it only via the official IRIS website for a successful password change.
+
 
 <ZoomableImage
   src="/images_mdx/ChangePassword.png"
