Photos updated, code block fixed

--- a/src/content/guides/NITK_VPN_Services.mdx
+++ b/src/content/guides/NITK_VPN_Services.mdx
@@ -2,12 +2,12 @@ export const frontmatter = { title: "How to use NITK’s VPN Services" }
 
 import CodeBlock from "../../components/ui/CodeBlock"
 import ZoomableImage from "../../components/ui/ZoomableImage"
-import NoteBox from "../../components/ui/NoteBox"
+  
 
 # How to use NITK’s VPN Services
 
->
-⚠ **Note:** You need an approved VPN account to use these services.  
+
+**Note:** You need an approved VPN account to use these services.  
 Faculty can request VPN access through IRIS → [Request for VPN Access](/guides/request-vpn-access).
 
 Please follow the instructions below to configure VPN on your device.
