--- a/src/content/guides/guide_for_troubleshooting.mdx
+++ b/src/content/guides/guide_for_troubleshooting.mdx
@@ -2,12 +2,12 @@ export const frontmatter = { title: "Guide for troubleshooting" }
 
 import CodeBlock from "../../components/ui/CodeBlock"
 import ZoomableImage from "../../components/ui/ZoomableImage"
-import NoteBox from "../../components/ui/NoteBox"
+  
 
 # Step-by-step guide for troubleshooting network issues before registering a complaint at NITK.
 
 >
-⚠ **Note:** This guide is meant **only for students**.  
+ **Note:** This guide is meant **only for students**.  
 **Faculty members** should directly email their issue to:  
 **notifyccc@nitk.edu.in**
 
