minor guides content changes

--- a/src/content/guides/request-captive-id.mdx
+++ b/src/content/guides/request-captive-id.mdx
@@ -17,7 +17,7 @@ import Button from '../../components/ui/button'
 
 ## Request Flow
 
-Faculty → HoD → CCC Chairman
+Faculty → HoD → Professor-in-Charge (CCC)
 
 ## Fields
 
