--- a/src/content/guides/request-vpn-access.mdx
+++ b/src/content/guides/request-vpn-access.mdx
@@ -6,9 +6,6 @@ import Button from '../../components/ui/button'
 # Request for NITK VPN Access
 
 
-> *Note: Only Faculty can make this request.*
-
-
 ## How to Apply
 
 1. Go to [IRIS](https://iris.nitk.ac.in/)
@@ -17,7 +14,7 @@ import Button from '../../components/ui/button'
 
 ## Request Flow
 
-Faculty → HoD → CCC Chairman
+Student or Faculty → HoD → Professor-in-Charge (CCC)
 
 ## Fields
 
